packages/errors/test/__snapshots__/CONFIG_FILE_INVALID_ROOT_CONFIG_E2E.ansi
[31mThe [33mbaseUrl[39m[31m configuration option is invalid when set from the root of the config object.[39m
[31m[39m
[31mSet it within a testing type property: [95me2e.baseUrl[39m[31m[39m
[31m[39m
[31m[94m{[39m[31m[39m
[31m[94m  e2e: {[39m[31m[39m
[31m[94m    baseUrl: '...',[39m[31m[39m
[31m[94m  }[39m[31m[39m
[31m[94m}[39m[31m[39m